--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="12dp"
-        android:text="点击进入 看剧"
+        android:text="点击进入 看剧（Fragment）"
         android:textSize="18sp"
         android:visibility="visible" />
 
@@ -50,6 +50,22 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#D4D4D4" />
+
+    <TextView
+        android:id="@+id/web_new_sdk_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="点击进入 看剧（Activity）"
+        android:textSize="18sp"
+        android:visibility="visible" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#D4D4D4"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/tv_current_sdk_version"
