--- a/sample/src/main/res/menu/toolbar_menu.xml
+++ b/sample/src/main/res/menu/toolbar_menu.xml
@@ -8,4 +8,10 @@
         android:visible="true"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/default_clean"
+        android:title="登出"
+        android:visible="true"
+        app:showAsAction="never" />
+
 </menu>
